@@ -6,7 +6,7 @@ Author: Henrik Bengtsson <henrikb@braju.com>
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
 Depends: R (>= 2.9.0), R.methodsS3 (>= 1.2.1), R.oo (>= 1.7.4), R.utils (>= 1.6.0), R.cache (>= 0.3.0), R.filesets (>= 0.9.1), R.rsp (>= 0.4.1), matrixStats (>= 0.2.2), digest (>= 0.4.2), aroma.light (>= 1.18.2)
 Imports: affxparser (>= 1.16.0), RColorBrewer (>= 1.0-2)
-Suggests: RColorBrewer (>= 1.0-2), EBImage (>= 2.2.0), Cairo (>= 1.3-5), sfit (>= 0.1.8), expectile (>= 0.2.5), GLAD (>= 1.12.0), DNAcopy (>= 1.20.0), HaarSeg (>= 0.0.2), mpcbs (>= 1.1.1)
+Suggests: RColorBrewer (>= 1.0-2), png (>= 0.1-2), EBImage (>= 2.2.0), Cairo (>= 1.3-5), sfit (>= 0.1.8), expectile (>= 0.2.5), GLAD (>= 1.12.0), DNAcopy (>= 1.20.0), HaarSeg (>= 0.0.2), mpcbs (>= 1.1.1)
 Description: This package contains core methods and classes used by higher-level aroma.* packages part of the Aroma Project, e.g. aroma.affymetrix and aroma.cn.  Its API should be considered to be in alpha and beta versions, and is mostly of interest to developers.
 License: LGPL (>= 2.1)
 URL: http://www.aroma-project.org/
